Link to stylesheets and script fixed
Function addTwet added to the code

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../../OneDrive/Desktop/Curso%20JavaScript%20-%20Proyectos/formularioLS/assets/css/normalize.css">
-    <link rel="stylesheet" href="../../OneDrive/Desktop/Curso%20JavaScript%20-%20Proyectos/formularioLS/assets/css/skeleton.css">
-    <link rel="stylesheet" href="../../OneDrive/Desktop/Curso%20JavaScript%20-%20Proyectos/formularioLS/assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/skeleton.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
 </head>
 <body>
 
@@ -32,6 +32,6 @@
         </div>
     </div> <!--#contenido-->
 
-    <script src="../../OneDrive/Desktop/Curso%20JavaScript%20-%20Proyectos/formularioLS/assets/js/app.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
